human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_18.wast
(assert_invalid
  (module (func $type-block-value-num-vs-void-after-break
    (block (br 0) (i32.const 1))
  ))
  "type mismatch"
)